--- a/dormdash/package.json
+++ b/dormdash/package.json
@@ -19,9 +19,9 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
+    "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.1"
   },
@@ -29,7 +29,7 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
-    "expo": "^54.0.13",
+    "expo": "54.0.23",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
