--- a/dormdash/tsconfig.json
+++ b/dormdash/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./node_modules/expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react",
     "strict": true
   },
   "include": ["**/*.ts", "**/*.tsx"]
