got my branch up to date with main

--- a/dormdash/tsconfig.json
+++ b/dormdash/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "strict": true,
+    "esModuleInterop": true,
     "lib": ["ES2016", "DOM"]
   },
   "include": ["**/*.ts", "**/*.tsx"]
