--- a/dormdash/tsconfig.json
+++ b/dormdash/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "./node_modules/expo/tsconfig.base",
   "compilerOptions": {
     "jsx": "react",
-    "strict": true
+    "strict": true,
+    "lib": ["ES2016", "DOM"]
   },
   "include": ["**/*.ts", "**/*.tsx"]
 }
