--- a/dormdash/package.json
+++ b/dormdash/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.75.0",
     "expo-image-picker": "^17.0.8",
