--- a/dormdash/package.json
+++ b/dormdash/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "deploy": "expo export --platform web && wrangler pages deploy dist --project-name dormdash"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -29,11 +30,13 @@
     "expo-image-picker": "^17.0.8",
     "expo-status-bar": "~3.0.8",
     "heic2any": "^0.0.4",
+    "lucide-react-native": "^0.561.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.15.0",
@@ -47,6 +50,7 @@
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "expo": "54.0.25",
