--- a/dormdash/wrangler.jsonc
+++ b/dormdash/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
   "name": "dormdash",
   "compatibility_date": "2025-12-12",
-  "pages_build_output_dir": "./dist" 
+  "pages_build_output_dir": "./dist",
 }
