--- a/dormdash/package.json
+++ b/dormdash/package.json
@@ -24,6 +24,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.75.0",
+    "@tanstack/react-query": "^5.90.12",
     "base64-arraybuffer": "^1.0.2",
     "convex": "^1.30.0",
     "expo-file-system": "~19.0.19",
