--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "convex dev",
-    "deploy": "convex deploy"
+    "deploy": "convex deploy",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "convex": "^1.30.0",
@@ -12,6 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^25.0.2",
+    "prettier": "3.8.1",
     "typescript": "~5.9.2"
   }
 }
