--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,14 +27,15 @@
     "@tanstack/react-query": "^5.90.12",
     "base64-arraybuffer": "^1.0.2",
     "convex": "^1.30.0",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "~19.0.21",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.10",
     "expo-status-bar": "~3.0.8",
     "heic2any": "^0.0.4",
     "lucide-react-native": "^0.561.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
