--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,10 @@
 {
   "name": "dormdash",
   "version": "1.0.0",
+  "packageManager": "pnpm@10.29.2",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start --tunnel --go",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -31,16 +32,19 @@
     "expo-file-system": "~19.0.21",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.10",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "~14.0.7",
     "heic2any": "^0.0.4",
     "lucide-react-native": "^0.561.0",
-    "react": "19.2.4",
-    "react-dom": "19.2.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
+    "react-native-maps": "1.20.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "wrangler": "^4.54.0"
